--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 	<title>Page</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	
 </head>
  <body>
@@ -11,110 +11,38 @@
   <div id="sidebar">
   
 
-   <p><a href="rigistr.html">Регистрация</a></p>
-<p><a href="chat.html">Чат</a></p>
-    <p><a href="picture.html">Картинки</a></p>
+   <p><a href="http://nigma.ru"> Nigma</a></p>
+<p><a href="#"> Чат</a></p>
+    <p><a href="#">Картинки</a></p>
+	<ul> 
+	<li><a> Контактная информация</a>
+		<ul>
+                   <li> Адрес  :<a href="http://google.ru">  Google </a> </li>
+					<li>E-mail   :<a href="mailto:asdasd@asdasd.ru">  E-mail.ru</a></li>
+                    
+                </ul>  
+        </li>
+      </ul>
  </div>
   <div id="content">
-    <h2>Blablabla</h2>
-   <h3> <p>absolute
+    <h2>Дэнчик inc</h2>
+  <h4> absolute
  Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного 
  элемента и нет. Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position
  родительского элемента. Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от
- края окна браузера. Если у родителя значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
+ края окна браузера. Если у родителя значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.
+fixed
  По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и bottom
  точке на экране и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если
- положение элемента задано фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.</p>
-<p>relative
+ положение элемента задано фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.
+relative
 Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента
- и сдвигает его в ту или иную сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
-  <h3> <p>absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного
- элемента и нет. Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position родительского
- элемента. Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от края окна браузера. 
- Если у родителя значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и bottom точке
- на экране и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если положение элемента
- задано фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют
- на позицию элемента.</p>
-<p>relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента и
- сдвигает его в ту или иную сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
-  <h3> <p>absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного элемента и нет. 
- Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position родительского элемента. 
- Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от края окна браузера. 
- Если у родителя значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и 
- bottom точке на экране и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, 
- если положение элемента задано фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.</p>
-<p>relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента
- и сдвигает его в ту или иную сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
-  <h3> <p>absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно 
- позиционированного элемента и нет. Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position родительского элемента. 
- Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от края окна браузера. Если у родителя значение position задано как 
- fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top,
- right и bottom точке на экране и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если положение элемента задано 
- фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.</p>
-<p>relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента и сдвигает его в ту или иную 
-сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
-  <h3> <p>absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного элемента и нет. 
- Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position родительского элемента. Так, если у 
- родителя значение position установлено как static или родителя нет, то отсчет координат ведется от края окна браузера. Если у родителя значение position 
- задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и bottom точке на экране
- и не 
- меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если положение элемента задано фиксированным,
- и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.</p>
-<p>relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента и сдвигает его
- в ту или иную сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
-  <h3> <p>absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного элемента 
- и нет. Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position родительского элемента. 
- Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от края окна браузера. Если у родителя 
- значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.</h3></p>
-<h4><p>fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и bottom точке на экране
- и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если положение элемента задано фиксированным, 
- и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.</p>
-<p>relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента и сдвигает его 
-в ту или иную сторону от первоначального расположения.</p> 
-<p>static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.</p>
-<p>inherit
-Наследует значение родителя.</p></h4>
+ и сдвигает его в ту или иную сторону от первоначального расположения. 
+static
+Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.
+inherit
+Наследует значение родителя.</h4>
+
   </div>
   <div id="footer">&copy; Денчик</div>
  </body>
