--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+п»ї<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -7,17 +7,17 @@
 	
 </head>
  <body>
-  <div id="header"><h1>Сайт</h1></div>
+  <div id="header"><h1>РЎР°Р№С‚</h1></div>
   <div id="sidebar">
   
 
    <p><a href="http://nigma.ru"> Nigma</a></p>
-<p><a href="#"> Чат</a></p>
-    <p><a href="#">Картинки</a></p>
+<p><a href="#"> Р§Р°С‚</a></p>
+    <p><a href="#">РљР°СЂС‚РёРЅРєРё</a></p>
 	<ul> 
-	<li><a> Контактная информация</a>
+	<li><a> РљРѕРЅС‚Р°РєС‚РЅР°СЏ РёРЅС„РѕСЂРјР°С†РёСЏ</a>
 		<ul>
-                   <li> Адрес  :<a href="http://google.ru">  Google </a> </li>
+                   <li> РђРґСЂРµСЃ  :<a href="http://google.ru">  Google </a> </li>
 					<li>E-mail   :<a href="mailto:asdasd@asdasd.ru">  E-mail.ru</a></li>
                     
                 </ul>  
@@ -25,25 +25,25 @@
       </ul>
  </div>
   <div id="content">
-    <h2>Дэнчик inc</h2>
+    <h2>Р”СЌРЅС‡РёРє inc</h2>
   <h4> absolute
- Указывает, что элемент абсолютно позиционирован, при этом другие элементы отображаются на веб-странице словно абсолютно позиционированного 
- элемента и нет. Положение элемента задается свойствами left, top, right и bottom, также на положение влияет значение свойства position
- родительского элемента. Так, если у родителя значение position установлено как static или родителя нет, то отсчет координат ведется от
- края окна браузера. Если у родителя значение position задано как fixed, relative или absolute, то отсчет координат ведется от края родительского элемента.
+ РЈРєР°Р·С‹РІР°РµС‚, С‡С‚Рѕ СЌР»РµРјРµРЅС‚ Р°Р±СЃРѕР»СЋС‚РЅРѕ РїРѕР·РёС†РёРѕРЅРёСЂРѕРІР°РЅ, РїСЂРё СЌС‚РѕРј РґСЂСѓРіРёРµ СЌР»РµРјРµРЅС‚С‹ РѕС‚РѕР±СЂР°Р¶Р°СЋС‚СЃСЏ РЅР° РІРµР±-СЃС‚СЂР°РЅРёС†Рµ СЃР»РѕРІРЅРѕ Р°Р±СЃРѕР»СЋС‚РЅРѕ РїРѕР·РёС†РёРѕРЅРёСЂРѕРІР°РЅРЅРѕРіРѕ 
+ СЌР»РµРјРµРЅС‚Р° Рё РЅРµС‚. РџРѕР»РѕР¶РµРЅРёРµ СЌР»РµРјРµРЅС‚Р° Р·Р°РґР°РµС‚СЃСЏ СЃРІРѕР№СЃС‚РІР°РјРё left, top, right Рё bottom, С‚Р°РєР¶Рµ РЅР° РїРѕР»РѕР¶РµРЅРёРµ РІР»РёСЏРµС‚ Р·РЅР°С‡РµРЅРёРµ СЃРІРѕР№СЃС‚РІР° position
+ СЂРѕРґРёС‚РµР»СЊСЃРєРѕРіРѕ СЌР»РµРјРµРЅС‚Р°. РўР°Рє, РµСЃР»Рё Сѓ СЂРѕРґРёС‚РµР»СЏ Р·РЅР°С‡РµРЅРёРµ position СѓСЃС‚Р°РЅРѕРІР»РµРЅРѕ РєР°Рє static РёР»Рё СЂРѕРґРёС‚РµР»СЏ РЅРµС‚, С‚Рѕ РѕС‚СЃС‡РµС‚ РєРѕРѕСЂРґРёРЅР°С‚ РІРµРґРµС‚СЃСЏ РѕС‚
+ РєСЂР°СЏ РѕРєРЅР° Р±СЂР°СѓР·РµСЂР°. Р•СЃР»Рё Сѓ СЂРѕРґРёС‚РµР»СЏ Р·РЅР°С‡РµРЅРёРµ position Р·Р°РґР°РЅРѕ РєР°Рє fixed, relative РёР»Рё absolute, С‚Рѕ РѕС‚СЃС‡РµС‚ РєРѕРѕСЂРґРёРЅР°С‚ РІРµРґРµС‚СЃСЏ РѕС‚ РєСЂР°СЏ СЂРѕРґРёС‚РµР»СЊСЃРєРѕРіРѕ СЌР»РµРјРµРЅС‚Р°.
 fixed
- По своему действию это значение близко к absolute, но в отличие от него привязывается к указанной свойствами left, top, right и bottom
- точке на экране и не меняет своего положения при прокрутке веб-страницы. Браузер Firefox вообще не отображает полосы прокрутки, если
- положение элемента задано фиксированным, и оно не помещается целиком в окно браузера. В браузере Opera хотя и показываются полосы прокрутки, но они никак не влияют на позицию элемента.
+ РџРѕ СЃРІРѕРµРјСѓ РґРµР№СЃС‚РІРёСЋ СЌС‚Рѕ Р·РЅР°С‡РµРЅРёРµ Р±Р»РёР·РєРѕ Рє absolute, РЅРѕ РІ РѕС‚Р»РёС‡РёРµ РѕС‚ РЅРµРіРѕ РїСЂРёРІСЏР·С‹РІР°РµС‚СЃСЏ Рє СѓРєР°Р·Р°РЅРЅРѕР№ СЃРІРѕР№СЃС‚РІР°РјРё left, top, right Рё bottom
+ С‚РѕС‡РєРµ РЅР° СЌРєСЂР°РЅРµ Рё РЅРµ РјРµРЅСЏРµС‚ СЃРІРѕРµРіРѕ РїРѕР»РѕР¶РµРЅРёСЏ РїСЂРё РїСЂРѕРєСЂСѓС‚РєРµ РІРµР±-СЃС‚СЂР°РЅРёС†С‹. Р‘СЂР°СѓР·РµСЂ Firefox РІРѕРѕР±С‰Рµ РЅРµ РѕС‚РѕР±СЂР°Р¶Р°РµС‚ РїРѕР»РѕСЃС‹ РїСЂРѕРєСЂСѓС‚РєРё, РµСЃР»Рё
+ РїРѕР»РѕР¶РµРЅРёРµ СЌР»РµРјРµРЅС‚Р° Р·Р°РґР°РЅРѕ С„РёРєСЃРёСЂРѕРІР°РЅРЅС‹Рј, Рё РѕРЅРѕ РЅРµ РїРѕРјРµС‰Р°РµС‚СЃСЏ С†РµР»РёРєРѕРј РІ РѕРєРЅРѕ Р±СЂР°СѓР·РµСЂР°. Р’ Р±СЂР°СѓР·РµСЂРµ Opera С…РѕС‚СЏ Рё РїРѕРєР°Р·С‹РІР°СЋС‚СЃСЏ РїРѕР»РѕСЃС‹ РїСЂРѕРєСЂСѓС‚РєРё, РЅРѕ РѕРЅРё РЅРёРєР°Рє РЅРµ РІР»РёСЏСЋС‚ РЅР° РїРѕР·РёС†РёСЋ СЌР»РµРјРµРЅС‚Р°.
 relative
-Положение элемента устанавливается относительно его исходного места. Добавление свойств left, top, right и bottom изменяет позицию элемента
- и сдвигает его в ту или иную сторону от первоначального расположения. 
+РџРѕР»РѕР¶РµРЅРёРµ СЌР»РµРјРµРЅС‚Р° СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РѕС‚РЅРѕСЃРёС‚РµР»СЊРЅРѕ РµРіРѕ РёСЃС…РѕРґРЅРѕРіРѕ РјРµСЃС‚Р°. Р”РѕР±Р°РІР»РµРЅРёРµ СЃРІРѕР№СЃС‚РІ left, top, right Рё bottom РёР·РјРµРЅСЏРµС‚ РїРѕР·РёС†РёСЋ СЌР»РµРјРµРЅС‚Р°
+ Рё СЃРґРІРёРіР°РµС‚ РµРіРѕ РІ С‚Сѓ РёР»Рё РёРЅСѓСЋ СЃС‚РѕСЂРѕРЅСѓ РѕС‚ РїРµСЂРІРѕРЅР°С‡Р°Р»СЊРЅРѕРіРѕ СЂР°СЃРїРѕР»РѕР¶РµРЅРёСЏ. 
 static
-Элементы отображаются как обычно. Использование свойств left, top, right и bottom не приводит к каким-либо результатам.
+Р­Р»РµРјРµРЅС‚С‹ РѕС‚РѕР±СЂР°Р¶Р°СЋС‚СЃСЏ РєР°Рє РѕР±С‹С‡РЅРѕ. РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ СЃРІРѕР№СЃС‚РІ left, top, right Рё bottom РЅРµ РїСЂРёРІРѕРґРёС‚ Рє РєР°РєРёРј-Р»РёР±Рѕ СЂРµР·СѓР»СЊС‚Р°С‚Р°Рј.
 inherit
-Наследует значение родителя.</h4>
+РќР°СЃР»РµРґСѓРµС‚ Р·РЅР°С‡РµРЅРёРµ СЂРѕРґРёС‚РµР»СЏ.</h4>
 
   </div>
-  <div id="footer">&copy; Денчик</div>
+  <div id="footer">&copy; Р”РµРЅС‡РёРє</div>
  </body>
 </html>
